[gd_scene load_steps=3 format=3 uid="uid://cqfkrotysvrq2"]

[ext_resource type="Script" uid="uid://cnfio4clhri2x" path="res://Scripts/pause_menu.gd" id="1_hdmo1"]

[sub_resource type="Theme" id="Theme_wyi4u"]
default_font_size = 32

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wyi4u")
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Paused"

[node name="ResumeBtn" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Resume Game"

[node name="MapBtn" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Map"

[node name="SettingsBtn" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="QuitBtn" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit to title"

[connection signal="pressed" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="GridContainer/MapBtn" to="." method="_on_map_btn_pressed"]
[connection signal="pressed" from="GridContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
